--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "vue": "^3.2.36",
     "vue-router": "^4.0.16"
   },
