--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "vite build && node server/server.js"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
