--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev.vue": "vite",
     "dev.node": "nodemon server/server.js",
     "build": "vite build",
+    "test": "jest",
     "start": "vite build && node server/server.js"
   },
   "dependencies": {
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
     "vite": "^2.9.9"
   }
