--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,14 @@
-FROM alpine
+FROM node:slim
 
-RUN apk add --update nodejs npm bind-tools
+RUN apt update && apt install -y \
+  dnsutils nmap traceroute \
+  dos2unix bsdmainutils procps
 
 COPY ./dist /app/dist
 COPY ./server /app/server
+
+RUN find /app/server/vendor/testssl.sh -type f -exec dos2unix {} \;
+RUN ln -s /app/server/vendor/testssl.sh/testssl.sh /usr/local/bin/testssl.sh
 
 COPY ./package.json /app/package.json
 COPY ./package-lock.json /app/package-lock.json
