--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "ansi-to-html": "^0.7.2",
     "compression": "^1.7.4",
     "express": "^4.18.1",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.36",
+    "vue-3-sanitize": "^0.1.4",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
