--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "server/vendor/testssl.sh"]
 	path = server/vendor/testssl.sh
 	url = https://github.com/drwetter/testssl.sh.git
-	branch = 3.0
+  branch = 3.1dev
