--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^2.3.3",
     "jest": "^28.1.1",
     "nodemon": "^2.0.16",
+    "prettier": "^2.7.1",
     "vite": "^2.9.9"
   }
 }
