--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ansi-to-html": "^0.7.2",
     "compression": "^1.7.4",
     "express": "^4.18.1",
+    "pinia": "^2.0.14",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.36",
