--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev.vue": "vite",
     "dev.node": "nodemon server/server.js",
     "build.vue": "vite build",
-    "build.docker": "vite build && docker build -t ssl-web-tools:1.0 -f docker/Dockerfile .",
+    "build.docker": "vite build && docker build -t hithere157/ssl-web-tools:1.0 -f docker/Dockerfile .",
     "test": "jest",
     "prettier": "prettier -w ."
   },
