--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.0.14",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
+    "splitpanes": "^3.1.1",
     "vue": "^3.2.37",
     "vue-3-sanitize": "^0.1.4",
     "vue-router": "^4.0.16"
