--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "compression": "^1.7.4",
     "express": "^4.18.1",
     "pinia": "^2.0.14",
+    "sass": "^1.53.0",
     "socket.io": "^4.5.1",
     "socket.io-client": "^4.5.1",
     "splitpanes": "^3.1.1",
